# document-extraction-system

./: .gitignore  01_project_setup.ipynb  README.md  document_extraction_poc.ipynb  evaluate.py  main.py  pyproject.toml
Backend/: api.py  json_generator.py  main.py  model_policy.py  output.py  pipeline.py
Backend/extractor/: document_classification.py  field_mapper.py  validation.py
Backend/extractors/: document_classification.py  field_mapper.py  validation.py
Backend/processor/: docx_processor.py  image_processor.py  ocr_processor.py  pdf_processor.py  text_extractor.py
Backend/processors/: docx_processor.py  image_processor.py  pdf_processor.py  text_extractor.py
dataset/employee_docs/: employees.csv  generate_aadhaar.py  generate_pan.py  generate_passbook.py
dataset/eval_results/: compare_by_doctype.csv  compare_by_variant.csv  compare_engines.py  eval_by_field.csv  eval_by_variant.csv  eval_per_image.csv  eval_results_easyocr.json  (+3 more)
frontend/: index.html  package-lock.json  package.json
notebooks/: 01_project_setup.ipynb  01_project_setup.py  02_text_extraction.ipynb  02_text_extraction.py  03_field_extraction.ipynb  03_field_extraction.py  04_save_output.ipynb  04_save_output.py  05_validation.ipynb  05_validation.py  document_extraction_poc.ipynb
outputs/: AnjaliSharma_20260525_192204.json  ArjunMehta_20260525_200621.json  NehaPatil_20260531_011615.json
scripts/: generate_readable_docs.py
test-CLI/: test_cli_and_pipeline.py  test_invoice_pipeline.py
testing/: llm_testing.py  reporting.py  testing.py
tests/: test_invoice_pipeline.py
(+647 files in other folders)
