[project]
name = "document-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "nbformat>=5.10.4",
    "opencv-python>=4.13.0.92",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
]
