[project]
name = "document-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.116.0",
    "ipywidgets>=8.1.8",
    "opencv-python>=4.13.0.92",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
    "regex>=2024.11.6",
    "pytesseract>=0.3.10",
    "paddleocr>=2.7.0.3",
    "paddlepaddle>=3.3.1",
    "rapidocr>=3.8.4",
    "onnxruntime>=1.20.0",
    "python-doctr[torch]>=1.0.1",
    "reportlab>=5.0.0",
    "pypdf>=6.13.3",
    "pymupdf>=1.27.2.3",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.35.0",
]
